# Horizon

./: CMakeLists.txt  README.md
EventHorizon/: CMakeLists.txt
EventHorizon/src/: EventHorizon.cpp
Horizon/: CMakeLists.txt
Horizon/src/: hpch.hpp
Horizon/src/Horizon/Core/: Application.cpp  Application.hpp  EntryPoint.hpp  Logger.cpp  Logger.hpp
